--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start": "concurrently \"cd server && node app.js\" \"npm run dev\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -19,15 +18,14 @@
     "@mui/icons-material": "^5.14.0",
     "android": "^0.0.8",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "github-calendar": "^2.3.2",
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^1.3.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -43,7 +41,6 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
-    "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
