--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@mui/icons-material": "^5.14.0",
     "android": "^0.0.8",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "github-calendar": "^2.3.2",
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
     "mongoose": "^7.3.4",
-    "multer": "^1.3.0",
-    "multer-gridfs-storage": "^1.3.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -42,6 +43,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
