--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-linear-gradient": "^2.7.3",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "wrangler": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
