--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "github-calendar": "^2.3.2",
     "gridfs-stream": "^1.1.1",
