--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "https://z477vrt9e4.us-east-1.awsapprunner.com",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
