--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -99,7 +98,7 @@ dist
 # public
 
 # vuepress build output
-.vuepress/dist
+.vuepress
 
 # vuepress v2.x temp and cache directory
 .temp
@@ -134,7 +133,6 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
 dist-ssr
 *.local
 
